syntax= "proto3";

package pb;

option go_package = "./pkg/pb";

service VideoService {
    rpc Signup (SignupRequest) returns (SignupResponse){}
    rpc Login (LoginRequest) returns (LoginResponse){}
  
}

// Signup

message SignupRequest {
    string email = 1;
    string password = 2;
    string phone_number = 3;
    string user_name = 4;
    string avatar_path = 5;

  }
  
  message SignupResponse {
    int64 status = 1;
    string error = 2;
    
  }
  
// Login

message LoginRequest {
    string email = 1;
    string password = 2;
  }
  
  message LoginResponse {
    int64 status = 1;
    string error = 2;
    string token = 3;
  }
  